--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,9 +31,9 @@ heart.beat.time=300000
 server.port=49989
 
 #default device service settings
-service.name=edgex-device-snmp
+service.name=device-snmp
 service.host=localhost
-#service.host=edgex-device-snmp
+#service.host=${service.name}
 service.labels=SNMP,scheduler
 service.callback=/api/v1/callback
 
