--- a/src/main/resources/schedule.properties
+++ b/src/main/resources/schedule.properties
@@ -25,7 +25,7 @@ schedule.interval=500
 default.schedule.name=Interval-1m
 default.schedule.frequency=PT1m
 
-default.scheduleEvent.name=Read-AllData-edgex-device-snmp
+default.scheduleEvent.name=Read-AllData-device-snmp
 default.scheduleEvent.path=/api/v1/device/all/AllLightStates
-default.scheduleEvent.service=edgex-device-snmp
+default.scheduleEvent.service=device-snmp
 default.scheduleEvent.schedule=Interval-1m
