--- a/docker-files/application.properties
+++ b/docker-files/application.properties
@@ -32,7 +32,8 @@ server.port=49989
 
 #default device service settings
 service.name=edgex-device-snmp
-service.host=edgex-device-snmp
+#service.host=localhost
+service.host=${service.name}
 service.labels=SNMP,scheduler
 service.callback=/api/v1/callback
 
@@ -47,3 +48,35 @@ spring.mvc.dispatch-options-request=true
 
 data.transform=true
 
+meta.db.addressable.url=http://edgex-core-metadata:48081/api/v1/addressable
+meta.db.deviceservice.url=http://edgex-core-metadata:48081/api/v1/deviceservice
+meta.db.deviceprofile.url=http://edgex-core-metadata:48081/api/v1/deviceprofile
+meta.db.device.url=http://edgex-core-metadata:48081/api/v1/device
+meta.db.devicemanager.url=http://edgex-core-metadata:48081/api/v1/devicemanager
+meta.db.devicereport.url=http://edgex-core-metadata:48081/api/v1/devicereport
+meta.db.command.url=http://edgex-core-metadata:48081/api/v1/command
+meta.db.event.url=http://edgex-core-metadata:48081/api/v1/scheduleevent
+meta.db.schedule.url=http://edgex-core-metadata:48081/api/v1/schedule
+meta.db.provisionwatcher.url=http://edgex-core-metadata:48081/api/v1/provisionwatcher
+meta.db.ping.url=http://edgex-core-metadata:48081/api/v1/ping
+
+core.db.event.url=http://edgex-core-data:48080/api/v1/event
+core.db.reading.url=http://edgex-core-data:48080/api/v1/reading
+core.db.valuedescriptor.url=http://edgex-core-data:48080/api/v1/valuedescriptor
+core.db.ping.url=http://edgex-core-data:48080/api/v1/ping
+
+logging.remote.enable=true
+logging.remote.url=http://edgex-support-logging:48061/api/v1/logs
+
+schedule.interval=500
+
+default.schedule.name=Interval-1m
+default.schedule.frequency=PT1m
+
+default.scheduleEvent.name=Read-AllData-edgex-device-snmp
+default.scheduleEvent.path=/api/v1/device/all/AllLightStates
+default.scheduleEvent.service=edgex-device-snmp
+default.scheduleEvent.schedule=Interval-1m
+snmp.version=1
+snmp.retries=2
+snmp.timeout=2000
